# rlbox_wasm2c_sandbox

./: .clang-tidy  .gitignore  AppSandbox.md  CMakeLists.txt  LibrarySandbox.md  README.md  build-wasiclang.sh
.github/workflows/: cmake.yml
c_src/: CMakeLists.txt  rlbox-wasm2c-rt.c  rlbox-wasm2c-rt.h  wasm-rt-minwasi.c  wasm-rt-minwasi.h  wasm-rt-os.c  wasm-rt-os.h
include/: rlbox_wasm2c_sandbox.hpp  rlbox_wasm2c_tls.hpp  wamr_sandbox.h  wasm2c_rt_mem.h  wasm2c_rt_minwasi.h
src/: wasm2c_rt_mem.c  wasm2c_rt_minwasi.c  wasm2c_rt_os.c
test/: test_wasm2c_sandbox_glue.cpp  test_wasm2c_sandbox_glue_embedder_vars.cpp  test_wasm2c_sandbox_glue_largestack.cpp  test_wasm2c_sandbox_glue_main.cpp  test_wasm2c_sandbox_glue_shadow.cpp  test_wasm2c_sandbox_glue_smallheap.cpp  test_wasm2c_sandbox_glue_static.cpp  test_wasm2c_sandbox_wasmtests.cpp
